--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,15 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.4",
+    "bcryptjs": "^2.4.3",
     "bs58": "^4.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
     "ws": "^8.18.0"
   }
