--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -13,13 +13,16 @@ VITE_API_BASE_URL=http://localhost:8080
 VITE_WS_URL=ws://localhost:8080
 
 # === Google OAuth hints ===
-# The frontend launches the backend's Google OAuth flow via `/api/auth/google`.
+# The frontend launches the backend's Google OAuth flow via `/api/auth/oauth/google`.
 # These variables document the values your backend should be configured with.
 # Replace the placeholders with the credentials from your Google Cloud project
 # (do NOT commit real secrets).
 GOOGLE_OAUTH_CLIENT_ID=861475074094-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=replace_with_backend_secret
+# Path that the frontend will open when starting Google OAuth. Adjust if your
+# reverse proxy maps the OAuth endpoints differently.
+VITE_GOOGLE_OAUTH_PATH=/api/auth/oauth/google
 # Comma-separated list of redirect URIs that must also be configured in Google Cloud.
-GOOGLE_OAUTH_REDIRECT_URIS=https://smpt.kz/api/auth/google/callback,http://localhost:8080/api/auth/google/callback
+GOOGLE_OAUTH_REDIRECT_URIS=https://smpt.kz/api/auth/oauth/google/callback,http://localhost:8080/api/auth/oauth/google/callback,https://smpt.kz/api/auth/google/callback,http://localhost:8080/api/auth/google/callback
 # Comma-separated list of allowed JavaScript origins for Google OAuth.
 GOOGLE_OAUTH_JAVASCRIPT_ORIGINS=https://smpt.kz,http://localhost:5173
