--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,14 +3,14 @@
 
 # === API endpoints ===
 # Public HTTP base of the backend REST API.
-# Local development: http://localhost:8080
+# Local development: http://191.101.184.209:8080
 # Production (behind the provided nginx): https://smpt.kz
-VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=http://191.101.184.209:8080
 
 # WebSocket endpoint exposed by the game server.
-# Local development: ws://localhost:8080
+# Local development: ws://191.101.184.209:8080
 # Production (behind nginx /socket/ location): wss://smpt.kz/socket/
-VITE_WS_URL=ws://localhost:8080
+VITE_WS_URL=ws://191.101.184.209:8080
 
 # === Google OAuth hints ===
 # The frontend launches the backend's Google OAuth flow via `/api/auth/oauth/google`.
@@ -23,6 +23,6 @@ GOOGLE_OAUTH_CLIENT_SECRET=replace_with_backend_secret
 # reverse proxy maps the OAuth endpoints differently.
 VITE_GOOGLE_OAUTH_PATH=/api/auth/oauth/google
 # Comma-separated list of redirect URIs that must also be configured in Google Cloud.
-GOOGLE_OAUTH_REDIRECT_URIS=https://smpt.kz/api/auth/oauth/google/callback,http://localhost:8080/api/auth/oauth/google/callback,https://smpt.kz/api/auth/google/callback,http://localhost:8080/api/auth/google/callback
+GOOGLE_OAUTH_REDIRECT_URIS=https://smpt.kz/api/auth/oauth/google/callback,http://191.101.184.209:8080/api/auth/oauth/google/callback,https://smpt.kz/api/auth/google/callback,http://191.101.184.209:8080/api/auth/google/callback
 # Comma-separated list of allowed JavaScript origins for Google OAuth.
-GOOGLE_OAUTH_JAVASCRIPT_ORIGINS=https://smpt.kz,http://localhost:5173
+GOOGLE_OAUTH_JAVASCRIPT_ORIGINS=https://smpt.kz,http://191.101.184.209:5173
