--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Backend configuration
 PORT=8080
-CLIENT_ORIGIN=http://localhost:5173
+CLIENT_ORIGIN=http://191.101.184.209:5173
 DATABASE_PATH=./data/slither.sqlite
 JWT_SECRET=change-me
 JWT_EXPIRES_IN=7d
 
 # Frontend configuration
-VITE_API_BASE_URL=http://localhost:8080
-VITE_WS_URL=ws://localhost:8080
+VITE_API_BASE_URL=http://191.101.184.209:8080
+VITE_WS_URL=ws://191.101.184.209:8080
